<resources>
    <string name="app_name">ShareYourSport</string>
    <string name="prompt_email">Username or e-mail</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="permission_localization">"Location permissions are needed for providing email
        completions."
    </string>
    <string name="confermapost">Clicca per visualizzare</string>
    <string name="stringaConferma">La prenotazione eseguita è avvenuta con successo</string>
    <string name="stringaconfermaurl">Per controllare le iscrizioni vedere il seguente link:</string>
    <string name="noHttp">No connessione HTTP</string>
    <string name="errorconnection">Errore connessione</string>
    <string name="send_me_a_notification_when">Send me a notification when:</string>
    <string name="a_new_event_is_created">a new event is created</string>
    <string name="someone_join_one_of_your_events">someone join one of your events</string>
    <string name="share_your_sport">Share Your Sport</string>
    <string name="settings">Settings</string>
    <string name="runtastic">Runtastic</string>
    <string name="take_statistic_from">Take statistic from:</string>
    <string name="freeletics">Freeletics</string>
    <string-array name="Sport">
        <item>Swimming</item>
        <item>Gym</item>
        <item>Tennis</item>
        <item>Football</item>
        <item>Running</item>
        <item>Yoga</item>
    </string-array>
    <string-array name="sex">
        <item>Male</item>
        <item>Female</item>

    </string-array>
</resources>
